# py-conformational-sampling

./: .gitignore  LICENSE  README.md  TS_and_stereo.txt  ensemble_TS.xyz  pyproject.toml  requirements.txt  setup.py  suzuki_conformers.xyz
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: custom.md  default-issue-template.md
.github/workflows/: ci.yml  test_tmate.yml
examples/alonso_ligand/: conformers_0_unoptimized.xyz  conformers_1_mc_hammer.xyz  conformers_2_metal_optimizer.xyz  conformers_3_xtb.xyz  ligand.xyz  slurm.py
examples/alonso_ligand/sample_output/: conformers_0_unoptimized.xyz  conformers_1_mc_hammer.xyz  conformers_2_metal_optimizer.xyz  conformers_3_xtb.xyz  conformers_4_dft.xyz  conformers_ligand_only.xyz  output.txt
examples/binap/: ligand.sdf  slurm.py
examples/binap/sample_output/: conformers_0_unoptimized.xyz  conformers_1_mc_hammer.xyz  conformers_2_metal_optimizer.xyz  conformers_3_xtb.xyz  conformers_3_xtb_test_rearrange.xyz  conformers_ligand_only.xyz
examples/dppe/: dppe.py  slurm.py
examples/dppe/sample_output/: conformers_0_unoptimized.xyz  conformers_1_mc_hammer.xyz  conformers_2_metal_optimizer.xyz  conformers_3_xtb.xyz  conformers_4_dft.xyz  conformers_ligand_only.xyz  output.txt  transition_states.xyz
examples/dppe/sample_output/scratch/pystring_0/: grown_string_000.xyz  grown_string_001.xyz  opt_converged_001.xyz  ts_opt.xyz
examples/dppe/sample_output/scratch/pystring_1/: grown_string_000.xyz  grown_string_001.xyz  opt_converged_001.xyz  ts_opt.xyz
examples/dppe/sample_output/scratch/pystring_2/: grown_string_000.xyz  grown_string_001.xyz  opt_converged_001.xyz  ts_opt.xyz
examples/dppe_output/: conformers_0_unoptimized.xyz  conformers_1_mc_hammer.xyz  conformers_2_metal_optimizer.xyz  conformers_3_xtb.xyz  conformers_ligand_only.xyz  ligand.xyz  output.txt
examples/gsm/: gsm_example.py  simple_gsm.py
examples/rueping/: BORON_BRIDGE_RESULTS.md  README.md  RUEPING-CATALYST.xyz  RUEPING-SUBSTRATE.xyz  analyze_geometry.py  analyze_gsm_results.py  catalyst_conformers.xyz  check_bonding.py  full_system.xyz  rueping.py  rueping_combinatorial.py  rueping_gsm.py  rueping_test_100.py  run_conformers.slurm  run_gsm.slurm  submit_all.sh  substrate_conformers.xyz  verify_conformers.py
examples/suzuki/: example2_L1.xyz  slurm.py  suzuki.py
examples/suzuki/sample_output/: conformers_0_unoptimized.xyz  conformers_1_mc_hammer.xyz  conformers_2_metal_optimizer.xyz  conformers_3_xtb.xyz  grown_string_000.xyz  grown_string_001.xyz  opt_converged_001.xyz  suzuki_conformers.xyz  transition_states.xyz
examples/suzuki/sample_output/scratch/pystring_0/: grown_string_000.xyz  grown_string_001.xyz  opt_converged_001.xyz  ts_opt.xyz
examples/suzuki/sample_output/scratch/pystring_1/: grown_string_000.xyz  grown_string_001.xyz  opt_converged_001.xyz  ts_opt.xyz
examples/test_ase/: test_ase.py  testing_ase.py
src/conformational_sampling/: __init__.py  analyze.py  ase_stko_optimizer.py  catalytic_reaction_complex.py  compare_with_paper.py  config.py  gsm.py  main.py  metal_complexes.py  mixed_square_planar.py  singlepoint.py  slurm.py  test.py  test_dask.py  utils.py  visualization.py
tests/: analyze.py  de_gsm_job.py  gsm_job_array.py  se_gsm_job_array.py  sp_job.py  test_analyze.py  test_conf_gsm.py  test_examples.py  test_gsm.py  test_main.py  test_pytest.py  test_utils.py  test_xtb_solvent.py
tests/test_data/: L8_RE_Ra_AntiEndo_ts.jout  L8_RE_Ra_AntiEndo_ts.xyz  example2_5a.xyz  example2_6a.xyz
(+3 files in other folders)
